--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -4,8 +4,19 @@
 
   <p>Title</p>
   <span>
-    <%= link_to book.title, book_path(book.id) %>
+    <%= book.title %>
   </span>
+  
+  <p>Body</p>
+  <span>
+    <%= book.body %>
+  </span>
+  
+<%= link_to 'Show', book_path(book.id) %>
+<%= link_to 'edit', edit_book_path(book.id) %>
+<%= link_to 'Destroy', book_path(@book), method: :delete %>
+
+
   
 
 <% end %>
