--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -4,10 +4,12 @@
 
   <h4>Title</h4>
   <%= f.text_field :title %>
-  
+
   <h4>Body</h4>
   <%= f.text_area :body %>
-  
+
+  <%= link_to 'Show', book_path(@book.id) %>
+  <%= link_to 'Back', '/books' %>
   <%= f.submit 'Update Book' %>
-  
+
 <% end %>
