--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,9 +14,7 @@
   
 <%= link_to 'Show', book_path(book.id) %>
 <%= link_to 'edit', edit_book_path(book.id) %>
-<%= link_to 'Destroy', book_path(@book), method: :delete %>
-
-
+<%= link_to 'Destroy',book_path(book.id), method: :delete %>
   
 
 <% end %>
