--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,6 +1,15 @@
 <h1>Editing book</h1>
 
-<%= form_with model: @book, url: update_book_path(@book.id), method: :patch do |f| %>
+<% if @book.errors.any? %>
+  <%= @book.erroes.count %>errors prohibited this book form being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
+<%= form_with model: @book do |f| %>
 
   <h4>Title</h4>
   <%= f.text_field :title %>
