--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,5 +1,14 @@
 <h1>New book</h1>
 
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this book form being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <%= form_with model: @book, url: '/books', method: :post do |f| %>
   
   
@@ -14,3 +23,4 @@
   <%= f.submit 'Create Book'%>
 
 <% end %>
+
