--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,11 @@
+<div>
+    <%= flash[:success] %>
+</div>
+
+<div>
+    <%= flash[:update] %>
+</div>
+
 <h2>Title</h2>
 <p><%= @book.title %></p>
 
@@ -7,5 +15,5 @@
 
 
 <%= link_to 'Edit', edit_book_path(@book.id) %>
-<%= link_to 'Back', :back %>
+<%= link_to 'Back', '/books' %>
 
