--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -24,31 +24,30 @@
 
 <% end %>
 
-
-
 <h1>Books</h1>
+<div><%= flash[:destroy] %></div>
 
-<% @books.each do |book| %>
+<table class= "table">
+  <thead>
+    <th>Title</th>
+    <th>Body</th>
+  </thead>
+  
+  <tbody>
+    <% @books.each do |book| %>
+    <tr>
+      <td><%= book.title %></td>
+      <td><%= book.body %></td>
+      <td><%= link_to 'Show', book_path(book.id) %></td>
+      <td><%= link_to 'Edit', book_path(book.id) %></td>
+      <td>
+        <%= form_with url: book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" do |f| %>
+        <%= f.submit 'destroy' %>
+        <% end %>
+      </td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
 
-  <div>
-    <%= flash[:destroy] %>
-  </div>
-  
-  <p>Title</p>
-  <span>
-    <%= book.title %>
-  </span>
-  
-  <p>Body</p>
-  <span>
-    <%= book.body %>
-  </span>
-  
-<%= link_to 'Show', book_path(book.id) %>
-<%= link_to 'edit', edit_book_path(book.id) %>
-<%= form_with url: book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" do |f| %>
-  <%= f.submit 'Destroy' %>
-<% end %>
-
-<% end %>
 
