--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,32 @@
+<body>
+<div><%= flash[:destroy] %></div>
+
+<h1>Books</h1>
+
+<table class= "table">
+  <thead>
+    <tr>
+    <th>Title</th>
+    <th>Body</th>
+    </tr>
+  </thead>
+  
+  <tbody>
+    <% @books.each do |book| %>
+    <tr>
+      <td><%= book.title %></td>
+      <td><%= book.body %></td>
+      <td><%= link_to 'Show', book_path(book.id) %></td>
+      <td><%= link_to 'Edit', book_path(book.id) %></td>
+      <td>
+        <%= link_to 'Destroy', book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %>
+      </td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
+
+
 <h1>New book</h1>
 
 <% if @book.errors.any? %>
@@ -24,30 +53,5 @@
 
 <% end %>
 
-<h1>Books</h1>
-<div><%= flash[:destroy] %></div>
-
-<table class= "table">
-  <thead>
-    <th>Title</th>
-    <th>Body</th>
-  </thead>
-  
-  <tbody>
-    <% @books.each do |book| %>
-    <tr>
-      <td><%= book.title %></td>
-      <td><%= book.body %></td>
-      <td><%= link_to 'Show', book_path(book.id) %></td>
-      <td><%= link_to 'Edit', book_path(book.id) %></td>
-      <td>
-        <%= form_with url: book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" do |f| %>
-        <%= f.submit 'destroy' %>
-        <% end %>
-      </td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
-
+</body>
 
